magick4j.jar added

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /.idea
 Magick4J/nbproject/private/private.xml
 RMagick4J/Manifest.txt
-RMagick4J/lib/magick4j.jar
+#RMagick4J/lib/magick4j.jar
 RMagick4J/pkg
 Magick4J/build
 Magick4J/dist
